feat: enriched readme file

--- a/codegen.yml
+++ b/codegen.yml
@@ -3,3 +3,6 @@ generates:
   ./src/types/graphql-types.ts:
     plugins:
       - typescript
+      - typescript-operations
+      - typescript-react-apollo
+      
